Table "cache" {
  "key" varchar(255) [pk, not null]
  "value" mediumtext [not null]
  "expiration" bigint [not null]

  Indexes {
    expiration [name: "cache_expiration_index"]
  }
}

Table "cache_locks" {
  "key" varchar(255) [pk, not null]
  "owner" varchar(255) [not null]
  "expiration" bigint [not null]

  Indexes {
    expiration [name: "cache_locks_expiration_index"]
  }
}

Table "failed_jobs" {
  "id" bigint [pk, not null, increment]
  "uuid" varchar(255) [not null]
  "connection" varchar(255) [not null]
  "queue" varchar(255) [not null]
  "payload" longtext [not null]
  "exception" longtext [not null]
  "failed_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    uuid [unique, name: "failed_jobs_uuid_unique"]
    (connection, queue, failed_at) [name: "failed_jobs_connection_queue_failed_at_index"]
  }
}

Table "job_batches" {
  "id" varchar(255) [pk, not null]
  "name" varchar(255) [not null]
  "total_jobs" int [not null]
  "pending_jobs" int [not null]
  "failed_jobs" int [not null]
  "failed_job_ids" longtext [not null]
  "options" mediumtext
  "cancelled_at" int
  "created_at" int [not null]
  "finished_at" int
}

Table "jobs" {
  "id" bigint [pk, not null, increment]
  "queue" varchar(255) [not null]
  "payload" longtext [not null]
  "attempts" smallint [not null]
  "reserved_at" int
  "available_at" int [not null]
  "created_at" int [not null]

  Indexes {
    queue [name: "jobs_queue_index"]
  }
}

Table "media" {
  "id" bigint [pk, not null, increment]
  "model_type" varchar(255) [not null]
  "model_id" bigint [not null]
  "uuid" char(36)
  "collection_name" varchar(255) [not null]
  "name" varchar(255) [not null]
  "file_name" varchar(255) [not null]
  "mime_type" varchar(255)
  "disk" varchar(255) [not null]
  "conversions_disk" varchar(255)
  "size" bigint [not null]
  "manipulations" json [not null]
  "custom_properties" json [not null]
  "generated_conversions" json [not null]
  "responsive_images" json [not null]
  "order_column" int
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    uuid [unique, name: "media_uuid_unique"]
    (model_type, model_id) [name: "media_model_type_model_id_index"]
    order_column [name: "media_order_column_index"]
  }
}

Table "migrations" {
  "id" int [pk, not null, increment]
  "migration" varchar(255) [not null]
  "batch" int [not null]
}

Table "password_reset_tokens" {
  "email" varchar(255) [pk, not null]
  "token" varchar(255) [not null]
  "created_at" timestamp
}

Table "sessions" {
  "id" varchar(255) [pk, not null]
  "user_id" bigint
  "ip_address" varchar(45)
  "user_agent" text
  "payload" longtext [not null]
  "last_activity" int [not null]

  Indexes {
    user_id [name: "sessions_user_id_index"]
    last_activity [name: "sessions_last_activity_index"]
  }
}

Table "users" {
  "id" bigint [pk, not null, increment]
  "name" varchar(100) [not null]
  "phone" varchar(20) [not null]
  "phone_verified_at" timestamp
  "password" varchar(255) [not null]
  "remember_token" varchar(100)
  "date_of_birth" date [null]
  "address" varchar(255) [null]
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    email [unique, name: "users_email_unique"]
  }
}

Table "categories" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    name [unique, name: "products_name_unique"]
  }
}

Table "meals" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "description" text [null]
  "price" decimal(10,2) [not null]
  "energy_kcal" "unsigned smallint" [not null]
  "protein_grams" "unsigned smallint"
  "carbs_grams" "unsigned smallint"
  "fat_grams" "unsigned smallint"
  "fiber_grams" "unsigned smallint"
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    name [unique, name: "products_name_unique"]
    category_id [name: "meals_category_id_foreign"]
  }
}

Table "ingredients" {
  "id" bigint [pk, not null, increment]
  "name" varchar(100) [not null]
  "icon" varchar(255) [not null]
  "created_at" timestamp
  "updated_at" timestamp
}

Table "ingredient_meal" {
  "id" bigint [pk, not null, increment]
  "ingredient_id" bigint [not null, ref: > ingredients.id]
  "meal_id" bigint [not null, ref: > meals.id]
}

Table "reviews" {
  "id" bigint [pk, not null, increment]
  "meal_id" bigint [not null, ref: > meals.id]
  "user_id" bigint [not null, ref: > users.id]
  // Rating scale from 1 to 5 stars
  "rating" "tinyint unsigned" [not null]
  "comment" text [null]
  "created_at" timestamp
}

Table "favorites" {
  "id" bigint [pk, not null, increment]
  "user_id" bigint [not null]
  "meal_id" bigint [not null]
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    user_id [name: "favorites_user_id_foreign"]
    user_id [name: "favorites_meal_id_foreign"]
  }
}

Table "carts" {
  "id" bigint [pk, not null, increment]
  "user_id" bigint [not null, ref: > users.id, unique]
  "created_at" timestamp
  "updated_at" timestamp
}

Table "cart_items" {
  "id" bigint [pk, not null, increment]
  "cart_id" bigint [ref: > carts.id, not null]
  "meal_id" bigint [ref: > meals.id, not null]
  "quantity" "tinyint unsigned" [not null, default: 1]
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    (cart_id, meal_id) [unique, name: "cart_items_cart_id_meal_id_unique"]
  }
}

Table "orders" {
  "id" bigint [pk, not null, increment]
  "user_id" bigint [ref: > users.id, not null]
  // Financial Snapshot
  "subtotal" decimal(10,2) [not null]
  "delivery_fee" decimal(10,2) [not null]
  "total" decimal(10,2) [not null]
  "delivery_address" varchar(255) [not null]
  "status" orders_status_enum [not null, default: "pending"]
  "created_at" timestamp
  "updated_at" timestamp
}

Enum "orders_status_enum" {
  "pending"
  "preparing"
  "out_for_delivery"
  "delivered"
  "cancelled"
}

Table "order_items" {
  "id" bigint [pk, not null, increment]
  "order_id" bigint [ref: > orders.id, not null]
  // nullable in case a meal is deleted from admin panel later
  "meal_id" bigint [ref: > meals.id]
  "price_at_purchase" decimal(10,2) [not null]
  "quantity" "tinyint unsigned" [not null]
  "created_at" timestamp

  Indexes {
    order_id [name: "order_items_order_id_foreign"]
    meal_id [name: "order_items_meal_id_foreign"]
  }
}
